[package]
name = "ilovetv_cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-rt = "2.8.0"
actix-web = "4.3.1"
anyhow = "1.0.72"
chrono = "0.4.26"
dotenv = "0.15.0"
futures = "0.3.28"
reqwest = { version = "0.11.18", features = ["stream", "gzip", "brotli", "deflate", "async-compression"] }
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }
